# neml2-langserv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
client/: .vscodeignore  package-lock.json  package.json  tsconfig.json
client/src/: extension.ts  inspectPanel.ts
client/syntaxes/: neml2.tmLanguage.json
neml2_langserv/: __main__.py  _neml2_bin.py  inspect_client.py  server.py  syntax_client.py
server/: hit_parser.py  server.py  syntax_client.py
