[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neml2-langserv"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
