[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neml2-langserv"
version = "0.1.1"
description = "Language server backing the NEML2 VS Code extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3",
    "neml2>=2.1.4",
    "nmhit>=0.1.2",
]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.urls]
Homepage = "https://github.com/applied-material-modeling/neml2-langserv"
Issues = "https://github.com/applied-material-modeling/neml2-langserv/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neml2_langserv*"]
