[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neml2-langserv"
# Reminder: this version is duplicated in client/package.json (the VS Code
# extension manifest) and in the LanguageServer constructor in
# neml2_langserv/server.py. Keep all three in sync until we wire up a single
# source of truth.
version = "0.3.3"
description = "Language server backing the NEML2 VS Code extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3",
    "neml2>=3.0.2",
    "nmhit>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.urls]
Homepage = "https://github.com/applied-material-modeling/neml2-langserv"
Issues = "https://github.com/applied-material-modeling/neml2-langserv/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neml2_langserv*"]
